--- a/www/src/app.html
+++ b/www/src/app.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8" />
 		<link
 			rel="icon"
-			href="%sveltekit.assets%/winf.svg"
+			href="%sveltekit.assets%/favicon.png"
 		/>
 
 		<meta
