feat: color settings, hero experiment, winf-font

--- a/www/src/app.html
+++ b/www/src/app.html
@@ -4,7 +4,13 @@
 		<meta charset="utf-8" />
 		<link
 			rel="icon"
-			href="%sveltekit.assets%/favicon.png"
+			href="%sveltekit.assets%/fswinf_favicon_light.png"
+			media="(prefers-color-scheme: light)"
+		/>
+		<link
+			rel="icon"
+			href="%sveltekit.assets%/fswinf_favicon_dark.png"
+			media="(prefers-color-scheme: dark)"
 		/>
 
 		<meta
